Fixed css for login button Made dropdown content hide and show visibility than remove from display with display: none (with transition) Added scroll event listener in App.js rather than home.js

--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,21 @@
   bottom: 18px;
   float: right;
 }
+
+.login-btn{
+  background: none;
+  border-radius: 7px;
+  padding: 6px 22px 6px 22px;
+  border-width: 2px;
+  transition: background-color 500ms ease;
+  border-color: white;
+  font-weight:bold;
+}
+
+.login-btn:hover{
+  background: rgba(255, 255, 255, 1);
+
+  color: #666666;
+}
+
+
