--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -1,5 +1,5 @@
 /* Dropdown Button */
-.dropbtn1 {
+.dropbtn {
     background:none;
     color: white;
     font-size: 16px;
@@ -12,14 +12,16 @@
   }
   
   /* The container <div> - needed to position the dropdown content */
-  .dropdown1 {
+  .dropdown {
     position: relative;
     display: inline-block;
   }
   
   /* Dropdown Content (Hidden by Default) */
-  .dropdown-content1 {
-    display: none;
+  .dropdown-content {
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 200ms ease;
     position: absolute;
     background-color: rgba(0,0,0,.9);
     min-width: 160px;
@@ -32,7 +34,7 @@
   }
   
   /* Links inside the dropdown */
-  .dropdown-content1 a {
+  .dropdown-content a {
     color: white;
     padding: 12px 16px;
     text-decoration: none;
@@ -40,12 +42,12 @@
   }
   
   /* Change color of dropdown links on hover */
-  .dropdown-content1 a:hover {
+  .dropdown-content a:hover {
       text-decoration: underline;
     }
 
     /* Links inside the dropdown */
-  .dropdown-content1 button {
+  .dropdown-content button {
     color: white;
     padding: 12px 16px;
     text-decoration: none;
@@ -57,14 +59,24 @@
   }
   
   /* Change color of dropdown links on hover */
-  .dropdown-content1 button:hover {
+  .dropdown-content button:hover {
       text-decoration: underline;
     }
   
   /* Show the dropdown menu on hover */
-  .dropdown1:hover .dropdown-content1 {display: block;}
+  .dropdown:hover .dropdown-content {
+    visibility: visible;
+    opacity: 1;
+  }
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown1:hover .dropbtn1 {
+  .dropdown:hover .dropbtn {
     background-color: rgba(255,255,255,.2);
     }
+
+    .dropbtn img{
+      height: 26px;
+      width: 26px;
+      position: relative;
+      bottom: 1px;
+  }
