--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -48,7 +48,7 @@
   }
 
   .toolbar_navigation-items {
-    padding: 0 0.5rem;
+    padding: 0 1.5rem;
   }
   
   .toolbar_navigation-items ul {
